<resources>
    <string name="app_name">Github User</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_repos">Repos</string>
    <string name="text_note">Note</string>
    <string name="text_save">Save</string>
    <string name="text_search">Search</string>
    <string name="text_empty_message">Oops, sorry, there is no user with that keyword, please use another keyword.</string>
    <string name="text_something_went_wrong_please_try_again_latter">Something went wrong please try again latter</string>
</resources>